--- a/pokerno-replay/src/main/resources/de/pokerno/replay/index.html
+++ b/pokerno-replay/src/main/resources/de/pokerno/replay/index.html
@@ -94,6 +94,8 @@
           var scenario = editor.getValue()
           localStorage.setItem('scenario', scenario)
 
+          $('#log').html('')
+
           $.ajax({
             type: 'POST',
             dataType: 'json',
