--- a/pokerno-replay/src/main/resources/de/pokerno/replay/index.html
+++ b/pokerno-replay/src/main/resources/de/pokerno/replay/index.html
@@ -57,7 +57,7 @@
     </template>
 
     <script type="text/javascript">
-      var host = 'localhost'//location.host
+      var host = location.host
 
       var ws = new WebSocket('ws://' + host + ':8080/_ws')
 
